@@ -13,6 +13,7 @@
 * For effect-plots (`type = "eff"`), the `axis.title`-argument can now be used to change the title of y-axes.
 * For `sjp.lm()`, `sjp.glm()`, `sjp.lmer()` and `sjp.glmer()`, if color palette has more values than needed, it is silently shortend to the required length.
 * When plotting mixed models, argument `geom.colors` now also applies to plot-type `type = "ri.slope"`.
+* New default correlation-method for `sjt.corr()` and `sjp.corr()` is now `pearson`.
 
 ## Bug fixes
 
