@@ -11,6 +11,7 @@ Changes to functions:
 * For effect-plots (`type = "eff"`), the `axis.title`-argument can now be used to change the title of y-axes.
 * For `sjp.lm()`, `sjp.glm()`, `sjp.lmer()` and `sjp.glmer()`, if color palette has more values than needed, it is silently shortend to the required length.
 * When plotting mixed models, argument `geom.colors` now also applies to plot-type `type = "ri.slope"`.
+* New default correlation-method for `sjt.corr()` and `sjp.corr()` is now `pearson`.
 
 Bug fixes:
 * Fixed bug in `sjt.frq()` for variables with many missign values and labelled values that did not occur on that variable.
